exports[`prefer-object-iterable-methods > invalid(1): for (const key of Object.keys(object)) {\n\tfoo(object[key]);\n} 1`] = `

  1 | for (const key of Object.keys(object)) {
  2 | 	foo(object[key]);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(1): for (const key of Object.keys(object)) {\n\tfoo(object[key]);\n} 2`] = `

Message:
> 1 | for (const key of Object.keys(object)) {
    |                          ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  2 | 	foo(object[key]);
  3 | }

Output:
  1 | for (const value of Object.values(object)) {
  2 | 	foo(value);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(10): for (const key of Object.keys(object)) {\n\tfoo(object[key]);\n\tupdate();\n} 1`] = `

  1 | for (const key of Object.keys(object)) {
  2 | 	foo(object[key]);
  3 | 	update();
  4 | }

`;

exports[`prefer-object-iterable-methods > invalid(10): for (const key of Object.keys(object)) {\n\tfoo(object[key]);\n\tupdate();\n} 2`] = `

Message:
> 1 | for (const key of Object.keys(object)) {
    |                          ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  2 | 	foo(object[key]);
  3 | 	update();
  4 | }

`;

exports[`prefer-object-iterable-methods > invalid(11): Object.keys(object).map(key => {\n\tconst result = foo(object[key]);\n\tupdate(object);\n\treturn result;\n}); 1`] = `

  1 | Object.keys(object).map(key => {
  2 | 	const result = foo(object[key]);
  3 | 	update(object);
  4 | 	return result;
  5 | });

`;

exports[`prefer-object-iterable-methods > invalid(11): Object.keys(object).map(key => {\n\tconst result = foo(object[key]);\n\tupdate(object);\n\treturn result;\n}); 2`] = `

Message:
> 1 | Object.keys(object).map(key => {
    |        ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  2 | 	const result = foo(object[key]);
  3 | 	update(object);
  4 | 	return result;
  5 | });

`;

exports[`prefer-object-iterable-methods > invalid(12): Object.keys(object).map(key => {\n\tconst result = foo(object[key]);\n\tupdate();\n\treturn result;\n}); 1`] = `

  1 | Object.keys(object).map(key => {
  2 | 	const result = foo(object[key]);
  3 | 	update();
  4 | 	return result;
  5 | });

`;

exports[`prefer-object-iterable-methods > invalid(12): Object.keys(object).map(key => {\n\tconst result = foo(object[key]);\n\tupdate();\n\treturn result;\n}); 2`] = `

Message:
> 1 | Object.keys(object).map(key => {
    |        ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  2 | 	const result = foo(object[key]);
  3 | 	update();
  4 | 	return result;
  5 | });

`;

exports[`prefer-object-iterable-methods > invalid(13): Object.keys(object).map(key => {\n\tthrow object[key];\n}); 1`] = `

  1 | Object.keys(object).map(key => {
  2 | 	throw object[key];
  3 | });

`;

exports[`prefer-object-iterable-methods > invalid(13): Object.keys(object).map(key => {\n\tthrow object[key];\n}); 2`] = `

Message:
> 1 | Object.keys(object).map(key => {
    |        ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  2 | 	throw object[key];
  3 | });

`;

exports[`prefer-object-iterable-methods > invalid(14): for (const key of Object.keys(object)) {\n\tconst value = getValue;\n\tconst item = object[key];\n} 1`] = `

  1 | for (const key of Object.keys(object)) {
  2 | 	const value = getValue;
  3 | 	const item = object[key];
  4 | }

`;

exports[`prefer-object-iterable-methods > invalid(14): for (const key of Object.keys(object)) {\n\tconst value = getValue;\n\tconst item = object[key];\n} 2`] = `

Message:
> 1 | for (const key of Object.keys(object)) {
    |                          ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  2 | 	const value = getValue;
  3 | 	const item = object[key];
  4 | }

Output:
  1 | for (const value_ of Object.values(object)) {
  2 | 	const value = getValue;
  3 | 	const item = value_;
  4 | }

`;

exports[`prefer-object-iterable-methods > invalid(15): for (const key of Object.keys(object)) {\n\tconst value = getValue;\n\tconst item = object[key] + key.length;\n} 1`] = `

  1 | for (const key of Object.keys(object)) {
  2 | 	const value = getValue;
  3 | 	const item = object[key] + key.length;
  4 | }

`;

exports[`prefer-object-iterable-methods > invalid(15): for (const key of Object.keys(object)) {\n\tconst value = getValue;\n\tconst item = object[key] + key.length;\n} 2`] = `

Message:
> 1 | for (const key of Object.keys(object)) {
    |                          ^^^^ Prefer \`Object.entries()\` over \`Object.keys()\`.
  2 | 	const value = getValue;
  3 | 	const item = object[key] + key.length;
  4 | }

Output:
  1 | for (const [key, value_] of Object.entries(object)) {
  2 | 	const value = getValue;
  3 | 	const item = value_ + key.length;
  4 | }

`;

exports[`prefer-object-iterable-methods > invalid(16): for (const key of Object.keys(object)) {\n\tconst item = object[key];\n\tbreak;\n} 1`] = `

  1 | for (const key of Object.keys(object)) {
  2 | 	const item = object[key];
  3 | 	break;
  4 | }

`;

exports[`prefer-object-iterable-methods > invalid(16): for (const key of Object.keys(object)) {\n\tconst item = object[key];\n\tbreak;\n} 2`] = `

Message:
> 1 | for (const key of Object.keys(object)) {
    |                          ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  2 | 	const item = object[key];
  3 | 	break;
  4 | }

`;

exports[`prefer-object-iterable-methods > invalid(17): for (const key of Object.keys(object)) {\n\tif (skip(key)) {\n\t\tcontinue;\n\t}\n\n\tfoo(object[key]);\n} 1`] = `

  1 | for (const key of Object.keys(object)) {
  2 | 	if (skip(key)) {
  3 | 		continue;
  4 | 	}
  5 |
  6 | 	foo(object[key]);
  7 | }

`;

exports[`prefer-object-iterable-methods > invalid(17): for (const key of Object.keys(object)) {\n\tif (skip(key)) {\n\t\tcontinue;\n\t}\n\n\tfoo(object[key]);\n} 2`] = `

Message:
> 1 | for (const key of Object.keys(object)) {
    |                          ^^^^ Prefer \`Object.entries()\` over \`Object.keys()\`.
  2 | 	if (skip(key)) {
  3 | 		continue;
  4 | 	}
  5 |
  6 | 	foo(object[key]);
  7 | }

`;

exports[`prefer-object-iterable-methods > invalid(18): function getFirstValue() {\n\tfor (const key of Object.keys(object)) {\n\t\treturn object[key];\n\t}\n} 1`] = `

  1 | function getFirstValue() {
  2 | 	for (const key of Object.keys(object)) {
  3 | 		return object[key];
  4 | 	}
  5 | }

`;

exports[`prefer-object-iterable-methods > invalid(18): function getFirstValue() {\n\tfor (const key of Object.keys(object)) {\n\t\treturn object[key];\n\t}\n} 2`] = `

Message:
  1 | function getFirstValue() {
> 2 | 	for (const key of Object.keys(object)) {
    | 	                         ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  3 | 		return object[key];
  4 | 	}
  5 | }

`;

exports[`prefer-object-iterable-methods > invalid(19): for (const key of Object.keys(object)) {\n\tthrow object[key];\n} 1`] = `

  1 | for (const key of Object.keys(object)) {
  2 | 	throw object[key];
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(19): for (const key of Object.keys(object)) {\n\tthrow object[key];\n} 2`] = `

Message:
> 1 | for (const key of Object.keys(object)) {
    |                          ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  2 | 	throw object[key];
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(2): for (const key of Object.keys(object)) {\n\tfoo(object[key], key);\n} 1`] = `

  1 | for (const key of Object.keys(object)) {
  2 | 	foo(object[key], key);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(2): for (const key of Object.keys(object)) {\n\tfoo(object[key], key);\n} 2`] = `

Message:
> 1 | for (const key of Object.keys(object)) {
    |                          ^^^^ Prefer \`Object.entries()\` over \`Object.keys()\`.
  2 | 	foo(object[key], key);
  3 | }

Output:
  1 | for (const [key, value] of Object.entries(object)) {
  2 | 	foo(value, key);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(20): for (const [key] of Object.entries(object)) {\n\tfoo(key);\n} 1`] = `

  1 | for (const [key] of Object.entries(object)) {
  2 | 	foo(key);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(20): for (const [key] of Object.entries(object)) {\n\tfoo(key);\n} 2`] = `

Message:
> 1 | for (const [key] of Object.entries(object)) {
    |                            ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.
  2 | 	foo(key);
  3 | }

Output:
  1 | for (const key of Object.keys(object)) {
  2 | 	foo(key);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(21): for (const [key, value] of Object.entries(object)) {\n\tfoo(key);\n} 1`] = `

  1 | for (const [key, value] of Object.entries(object)) {
  2 | 	foo(key);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(21): for (const [key, value] of Object.entries(object)) {\n\tfoo(key);\n} 2`] = `

Message:
> 1 | for (const [key, value] of Object.entries(object)) {
    |                                   ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.
  2 | 	foo(key);
  3 | }

Output:
  1 | for (const key of Object.keys(object)) {
  2 | 	foo(key);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(22): for (const [key, value] of Object.entries(object)) {\n\tfoo(value);\n} 1`] = `

  1 | for (const [key, value] of Object.entries(object)) {
  2 | 	foo(value);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(22): for (const [key, value] of Object.entries(object)) {\n\tfoo(value);\n} 2`] = `

Message:
> 1 | for (const [key, value] of Object.entries(object)) {
    |                                   ^^^^^^^ Prefer \`Object.values()\` over \`Object.entries()\`.
  2 | 	foo(value);
  3 | }

Output:
  1 | for (const value of Object.values(object)) {
  2 | 	foo(value);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(23): for (const [, value] of Object.entries(object)) {\n\tfoo(value);\n} 1`] = `

  1 | for (const [, value] of Object.entries(object)) {
  2 | 	foo(value);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(23): for (const [, value] of Object.entries(object)) {\n\tfoo(value);\n} 2`] = `

Message:
> 1 | for (const [, value] of Object.entries(object)) {
    |                                ^^^^^^^ Prefer \`Object.values()\` over \`Object.entries()\`.
  2 | 	foo(value);
  3 | }

Output:
  1 | for (const value of Object.values(object)) {
  2 | 	foo(value);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(24): const result = Object.entries(object).map(([key]) => foo(key)); 1`] = `

  1 | const result = Object.entries(object).map(([key]) => foo(key));

`;

exports[`prefer-object-iterable-methods > invalid(24): const result = Object.entries(object).map(([key]) => foo(key)); 2`] = `

Message:
> 1 | const result = Object.entries(object).map(([key]) => foo(key));
    |                       ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.keys(object).map((key) => foo(key));

`;

exports[`prefer-object-iterable-methods > invalid(25): const result = Object.entries(object).map(([key, value]) => foo(key)); 1`] = `

  1 | const result = Object.entries(object).map(([key, value]) => foo(key));

`;

exports[`prefer-object-iterable-methods > invalid(25): const result = Object.entries(object).map(([key, value]) => foo(key)); 2`] = `

Message:
> 1 | const result = Object.entries(object).map(([key, value]) => foo(key));
    |                       ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.keys(object).map((key) => foo(key));

`;

exports[`prefer-object-iterable-methods > invalid(26): const result = Object.entries(object).map(([key, value]) => foo(value)); 1`] = `

  1 | const result = Object.entries(object).map(([key, value]) => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(26): const result = Object.entries(object).map(([key, value]) => foo(value)); 2`] = `

Message:
> 1 | const result = Object.entries(object).map(([key, value]) => foo(value));
    |                       ^^^^^^^ Prefer \`Object.values()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.values(object).map((value) => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(27): const result = Object.entries(object).map(([, value]) => foo(value)); 1`] = `

  1 | const result = Object.entries(object).map(([, value]) => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(27): const result = Object.entries(object).map(([, value]) => foo(value)); 2`] = `

Message:
> 1 | const result = Object.entries(object).map(([, value]) => foo(value));
    |                       ^^^^^^^ Prefer \`Object.values()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.values(object).map((value) => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(28): const result = Object.entries(object).map(([key], index) => foo(key, index)); 1`] = `

  1 | const result = Object.entries(object).map(([key], index) => foo(key, index));

`;

exports[`prefer-object-iterable-methods > invalid(28): const result = Object.entries(object).map(([key], index) => foo(key, index)); 2`] = `

Message:
> 1 | const result = Object.entries(object).map(([key], index) => foo(key, index));
    |                       ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.keys(object).map((key, index) => foo(key, index));

`;

exports[`prefer-object-iterable-methods > invalid(29): const result = Object.entries(object).map(function ([key]) {\n\treturn this.has(key);\n}, names); 1`] = `

  1 | const result = Object.entries(object).map(function ([key]) {
  2 | 	return this.has(key);
  3 | }, names);

`;

exports[`prefer-object-iterable-methods > invalid(29): const result = Object.entries(object).map(function ([key]) {\n\treturn this.has(key);\n}, names); 2`] = `

Message:
> 1 | const result = Object.entries(object).map(function ([key]) {
    |                       ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.
  2 | 	return this.has(key);
  3 | }, names);

Output:
  1 | const result = Object.keys(object).map(function (key) {
  2 | 	return this.has(key);
  3 | }, names);

`;

exports[`prefer-object-iterable-methods > invalid(3): const result = Object.keys(object).map(key => foo(object[key])); 1`] = `

  1 | const result = Object.keys(object).map(key => foo(object[key]));

`;

exports[`prefer-object-iterable-methods > invalid(3): const result = Object.keys(object).map(key => foo(object[key])); 2`] = `

Message:
> 1 | const result = Object.keys(object).map(key => foo(object[key]));
    |                       ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.

Output:
  1 | const result = Object.values(object).map(value => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(30): Object.entries(object).map(([key, value]) => {\n\tthrow key;\n}); 1`] = `

  1 | Object.entries(object).map(([key, value]) => {
  2 | 	throw key;
  3 | });

`;

exports[`prefer-object-iterable-methods > invalid(30): Object.entries(object).map(([key, value]) => {\n\tthrow key;\n}); 2`] = `

Message:
> 1 | Object.entries(object).map(([key, value]) => {
    |        ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.
  2 | 	throw key;
  3 | });

`;

exports[`prefer-object-iterable-methods > invalid(31): const result = Object.entries(object).every(([key, value]) => foo(key)); 1`] = `

  1 | const result = Object.entries(object).every(([key, value]) => foo(key));

`;

exports[`prefer-object-iterable-methods > invalid(31): const result = Object.entries(object).every(([key, value]) => foo(key)); 2`] = `

Message:
> 1 | const result = Object.entries(object).every(([key, value]) => foo(key));
    |                       ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.keys(object).every((key) => foo(key));

`;

exports[`prefer-object-iterable-methods > invalid(32): const result = Object.entries(object).every(([key, value]) => foo(value)); 1`] = `

  1 | const result = Object.entries(object).every(([key, value]) => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(32): const result = Object.entries(object).every(([key, value]) => foo(value)); 2`] = `

Message:
> 1 | const result = Object.entries(object).every(([key, value]) => foo(value));
    |                       ^^^^^^^ Prefer \`Object.values()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.values(object).every((value) => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(33): const result = Object.entries(object).every(([key], index) => foo(key, index)); 1`] = `

  1 | const result = Object.entries(object).every(([key], index) => foo(key, index));

`;

exports[`prefer-object-iterable-methods > invalid(33): const result = Object.entries(object).every(([key], index) => foo(key, index)); 2`] = `

Message:
> 1 | const result = Object.entries(object).every(([key], index) => foo(key, index));
    |                       ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.keys(object).every((key, index) => foo(key, index));

`;

exports[`prefer-object-iterable-methods > invalid(34): const result = Object.entries(object).every(function ([key]) {\n\treturn this.has(key);\n}, names); 1`] = `

  1 | const result = Object.entries(object).every(function ([key]) {
  2 | 	return this.has(key);
  3 | }, names);

`;

exports[`prefer-object-iterable-methods > invalid(34): const result = Object.entries(object).every(function ([key]) {\n\treturn this.has(key);\n}, names); 2`] = `

Message:
> 1 | const result = Object.entries(object).every(function ([key]) {
    |                       ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.
  2 | 	return this.has(key);
  3 | }, names);

Output:
  1 | const result = Object.keys(object).every(function (key) {
  2 | 	return this.has(key);
  3 | }, names);

`;

exports[`prefer-object-iterable-methods > invalid(35): const result = Object.entries(object).some(([key, value]) => foo(key)); 1`] = `

  1 | const result = Object.entries(object).some(([key, value]) => foo(key));

`;

exports[`prefer-object-iterable-methods > invalid(35): const result = Object.entries(object).some(([key, value]) => foo(key)); 2`] = `

Message:
> 1 | const result = Object.entries(object).some(([key, value]) => foo(key));
    |                       ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.keys(object).some((key) => foo(key));

`;

exports[`prefer-object-iterable-methods > invalid(36): const result = Object.entries(object).some(([key, value]) => foo(value)); 1`] = `

  1 | const result = Object.entries(object).some(([key, value]) => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(36): const result = Object.entries(object).some(([key, value]) => foo(value)); 2`] = `

Message:
> 1 | const result = Object.entries(object).some(([key, value]) => foo(value));
    |                       ^^^^^^^ Prefer \`Object.values()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.values(object).some((value) => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(37): Object.entries(object).some(([key]) => {\n\tthrow key;\n}); 1`] = `

  1 | Object.entries(object).some(([key]) => {
  2 | 	throw key;
  3 | });

`;

exports[`prefer-object-iterable-methods > invalid(37): Object.entries(object).some(([key]) => {\n\tthrow key;\n}); 2`] = `

Message:
> 1 | Object.entries(object).some(([key]) => {
    |        ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.
  2 | 	throw key;
  3 | });

`;

exports[`prefer-object-iterable-methods > invalid(38): const result = Object.entries(object).findIndex(([key, value]) => foo(key)); 1`] = `

  1 | const result = Object.entries(object).findIndex(([key, value]) => foo(key));

`;

exports[`prefer-object-iterable-methods > invalid(38): const result = Object.entries(object).findIndex(([key, value]) => foo(key)); 2`] = `

Message:
> 1 | const result = Object.entries(object).findIndex(([key, value]) => foo(key));
    |                       ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.keys(object).findIndex((key) => foo(key));

`;

exports[`prefer-object-iterable-methods > invalid(39): const result = Object.entries(object).findIndex(([key, value]) => foo(value)); 1`] = `

  1 | const result = Object.entries(object).findIndex(([key, value]) => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(39): const result = Object.entries(object).findIndex(([key, value]) => foo(value)); 2`] = `

Message:
> 1 | const result = Object.entries(object).findIndex(([key, value]) => foo(value));
    |                       ^^^^^^^ Prefer \`Object.values()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.values(object).findIndex((value) => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(4): const result = Object.keys(object).map(key => foo(object[key], key)); 1`] = `

  1 | const result = Object.keys(object).map(key => foo(object[key], key));

`;

exports[`prefer-object-iterable-methods > invalid(4): const result = Object.keys(object).map(key => foo(object[key], key)); 2`] = `

Message:
> 1 | const result = Object.keys(object).map(key => foo(object[key], key));
    |                       ^^^^ Prefer \`Object.entries()\` over \`Object.keys()\`.

Output:
  1 | const result = Object.entries(object).map(([key, value]) => foo(value, key));

`;

exports[`prefer-object-iterable-methods > invalid(40): const result = Object.entries(object).findLastIndex(([key, value]) => foo(key)); 1`] = `

  1 | const result = Object.entries(object).findLastIndex(([key, value]) => foo(key));

`;

exports[`prefer-object-iterable-methods > invalid(40): const result = Object.entries(object).findLastIndex(([key, value]) => foo(key)); 2`] = `

Message:
> 1 | const result = Object.entries(object).findLastIndex(([key, value]) => foo(key));
    |                       ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.keys(object).findLastIndex((key) => foo(key));

`;

exports[`prefer-object-iterable-methods > invalid(41): const result = Object.entries(object).findLastIndex(([key, value]) => foo(value)); 1`] = `

  1 | const result = Object.entries(object).findLastIndex(([key, value]) => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(41): const result = Object.entries(object).findLastIndex(([key, value]) => foo(value)); 2`] = `

Message:
> 1 | const result = Object.entries(object).findLastIndex(([key, value]) => foo(value));
    |                       ^^^^^^^ Prefer \`Object.values()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.values(object).findLastIndex((value) => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(42): const result = Object.entries(object).flatMap(([key, value]) => foo(key)); 1`] = `

  1 | const result = Object.entries(object).flatMap(([key, value]) => foo(key));

`;

exports[`prefer-object-iterable-methods > invalid(42): const result = Object.entries(object).flatMap(([key, value]) => foo(key)); 2`] = `

Message:
> 1 | const result = Object.entries(object).flatMap(([key, value]) => foo(key));
    |                       ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.keys(object).flatMap((key) => foo(key));

`;

exports[`prefer-object-iterable-methods > invalid(43): const result = Object.entries(object).flatMap(([key, value]) => foo(value)); 1`] = `

  1 | const result = Object.entries(object).flatMap(([key, value]) => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(43): const result = Object.entries(object).flatMap(([key, value]) => foo(value)); 2`] = `

Message:
> 1 | const result = Object.entries(object).flatMap(([key, value]) => foo(value));
    |                       ^^^^^^^ Prefer \`Object.values()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.values(object).flatMap((value) => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(44): Object.entries(object).forEach(([key, value]) => foo(key)); 1`] = `

  1 | Object.entries(object).forEach(([key, value]) => foo(key));

`;

exports[`prefer-object-iterable-methods > invalid(44): Object.entries(object).forEach(([key, value]) => foo(key)); 2`] = `

Message:
> 1 | Object.entries(object).forEach(([key, value]) => foo(key));
    |        ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.

Output:
  1 | Object.keys(object).forEach((key) => foo(key));

`;

exports[`prefer-object-iterable-methods > invalid(45): Object.entries(object).forEach(([key, value]) => foo(value)); 1`] = `

  1 | Object.entries(object).forEach(([key, value]) => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(45): Object.entries(object).forEach(([key, value]) => foo(value)); 2`] = `

Message:
> 1 | Object.entries(object).forEach(([key, value]) => foo(value));
    |        ^^^^^^^ Prefer \`Object.values()\` over \`Object.entries()\`.

Output:
  1 | Object.values(object).forEach((value) => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(46): const result = Object.entries(object).reduce((result, [key, value]) => result + key, \"\"); 1`] = `

  1 | const result = Object.entries(object).reduce((result, [key, value]) => result + key, "");

`;

exports[`prefer-object-iterable-methods > invalid(46): const result = Object.entries(object).reduce((result, [key, value]) => result + key, \"\"); 2`] = `

Message:
> 1 | const result = Object.entries(object).reduce((result, [key, value]) => result + key, "");
    |                       ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.keys(object).reduce((result, key) => result + key, "");

`;

exports[`prefer-object-iterable-methods > invalid(47): const result = Object.entries(object).reduce((result, [key, value]) => result + value, 0); 1`] = `

  1 | const result = Object.entries(object).reduce((result, [key, value]) => result + value, 0);

`;

exports[`prefer-object-iterable-methods > invalid(47): const result = Object.entries(object).reduce((result, [key, value]) => result + value, 0); 2`] = `

Message:
> 1 | const result = Object.entries(object).reduce((result, [key, value]) => result + value, 0);
    |                       ^^^^^^^ Prefer \`Object.values()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.values(object).reduce((result, value) => result + value, 0);

`;

exports[`prefer-object-iterable-methods > invalid(48): const result = Object.entries(object).reduce((result, [, value], index) => result + value + index, 0); 1`] = `

  1 | const result = Object.entries(object).reduce((result, [, value], index) => result + value + index, 0);

`;

exports[`prefer-object-iterable-methods > invalid(48): const result = Object.entries(object).reduce((result, [, value], index) => result + value + index, 0); 2`] = `

Message:
> 1 | const result = Object.entries(object).reduce((result, [, value], index) => result + value + index, 0);
    |                       ^^^^^^^ Prefer \`Object.values()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.values(object).reduce((result, value, index) => result + value + index, 0);

`;

exports[`prefer-object-iterable-methods > invalid(49): const result = Object.entries(object).reduceRight((result, [key, value]) => result + key, \"\"); 1`] = `

  1 | const result = Object.entries(object).reduceRight((result, [key, value]) => result + key, "");

`;

exports[`prefer-object-iterable-methods > invalid(49): const result = Object.entries(object).reduceRight((result, [key, value]) => result + key, \"\"); 2`] = `

Message:
> 1 | const result = Object.entries(object).reduceRight((result, [key, value]) => result + key, "");
    |                       ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.keys(object).reduceRight((result, key) => result + key, "");

`;

exports[`prefer-object-iterable-methods > invalid(5): const result = Object.keys(object).map((key) => foo(object[key], key)); 1`] = `

  1 | const result = Object.keys(object).map((key) => foo(object[key], key));

`;

exports[`prefer-object-iterable-methods > invalid(5): const result = Object.keys(object).map((key) => foo(object[key], key)); 2`] = `

Message:
> 1 | const result = Object.keys(object).map((key) => foo(object[key], key));
    |                       ^^^^ Prefer \`Object.entries()\` over \`Object.keys()\`.

Output:
  1 | const result = Object.entries(object).map(([key, value]) => foo(value, key));

`;

exports[`prefer-object-iterable-methods > invalid(50): const result = Object.entries(object).reduceRight((result, [key, value]) => result + value, 0); 1`] = `

  1 | const result = Object.entries(object).reduceRight((result, [key, value]) => result + value, 0);

`;

exports[`prefer-object-iterable-methods > invalid(50): const result = Object.entries(object).reduceRight((result, [key, value]) => result + value, 0); 2`] = `

Message:
> 1 | const result = Object.entries(object).reduceRight((result, [key, value]) => result + value, 0);
    |                       ^^^^^^^ Prefer \`Object.values()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.values(object).reduceRight((result, value) => result + value, 0);

`;

exports[`prefer-object-iterable-methods > invalid(51): const result = Object.entries(object).reduceRight((result, [, value], index) => result + value + index, 0); 1`] = `

  1 | const result = Object.entries(object).reduceRight((result, [, value], index) => result + value + index, 0);

`;

exports[`prefer-object-iterable-methods > invalid(51): const result = Object.entries(object).reduceRight((result, [, value], index) => result + value + index, 0); 2`] = `

Message:
> 1 | const result = Object.entries(object).reduceRight((result, [, value], index) => result + value + index, 0);
    |                       ^^^^^^^ Prefer \`Object.values()\` over \`Object.entries()\`.

Output:
  1 | const result = Object.values(object).reduceRight((result, value, index) => result + value + index, 0);

`;

exports[`prefer-object-iterable-methods > invalid(52): for (const key of Object.keys((object))) {\n\tfoo((object)[key]);\n} 1`] = `

  1 | for (const key of Object.keys((object))) {
  2 | 	foo((object)[key]);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(52): for (const key of Object.keys((object))) {\n\tfoo((object)[key]);\n} 2`] = `

Message:
> 1 | for (const key of Object.keys((object))) {
    |                          ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  2 | 	foo((object)[key]);
  3 | }

Output:
  1 | for (const value of Object.values((object))) {
  2 | 	foo(value);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(53): Object.keys(object as Record<string, unknown>).map(key => (object as Record<string, unknown>)[key]); 1`] = `

  1 | Object.keys(object as Record<string, unknown>).map(key => (object as Record<string, unknown>)[key]);

`;

exports[`prefer-object-iterable-methods > invalid(53): Object.keys(object as Record<string, unknown>).map(key => (object as Record<string, unknown>)[key]); 2`] = `

Message:
> 1 | Object.keys(object as Record<string, unknown>).map(key => (object as Record<string, unknown>)[key]);
    |        ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.

Output:
  1 | Object.values(object as Record<string, unknown>).map(value => value);

`;

exports[`prefer-object-iterable-methods > invalid(54): Object.keys(object!).map(key => object![key]); 1`] = `

  1 | Object.keys(object!).map(key => object![key]);

`;

exports[`prefer-object-iterable-methods > invalid(54): Object.keys(object!).map(key => object![key]); 2`] = `

Message:
> 1 | Object.keys(object!).map(key => object![key]);
    |        ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.

Output:
  1 | Object.values(object!).map(value => value);

`;

exports[`prefer-object-iterable-methods > invalid(55): Object.keys(object satisfies Record<string, unknown>).map(key => (object satisfies Record<string, unknown>)[key]); 1`] = `

  1 | Object.keys(object satisfies Record<string, unknown>).map(key => (object satisfies Record<string, unknown>)[key]);

`;

exports[`prefer-object-iterable-methods > invalid(55): Object.keys(object satisfies Record<string, unknown>).map(key => (object satisfies Record<string, unknown>)[key]); 2`] = `

Message:
> 1 | Object.keys(object satisfies Record<string, unknown>).map(key => (object satisfies Record<string, unknown>)[key]);
    |        ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.

Output:
  1 | Object.values(object satisfies Record<string, unknown>).map(value => value);

`;

exports[`prefer-object-iterable-methods > invalid(56): for (const key of Object.keys(object)) {\n\tfoo((object as Record<string, unknown>)[key]);\n} 1`] = `

  1 | for (const key of Object.keys(object)) {
  2 | 	foo((object as Record<string, unknown>)[key]);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(56): for (const key of Object.keys(object)) {\n\tfoo((object as Record<string, unknown>)[key]);\n} 2`] = `

Message:
> 1 | for (const key of Object.keys(object)) {
    |                          ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  2 | 	foo((object as Record<string, unknown>)[key]);
  3 | }

Output:
  1 | for (const value of Object.values(object as Record<string, unknown>)) {
  2 | 	foo(value);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(57): Object.keys(object).map(key => foo((object as Record<string, unknown>)[key])); 1`] = `

  1 | Object.keys(object).map(key => foo((object as Record<string, unknown>)[key]));

`;

exports[`prefer-object-iterable-methods > invalid(57): Object.keys(object).map(key => foo((object as Record<string, unknown>)[key])); 2`] = `

Message:
> 1 | Object.keys(object).map(key => foo((object as Record<string, unknown>)[key]));
    |        ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.

Output:
  1 | Object.values(object as Record<string, unknown>).map(value => foo(value));

`;

exports[`prefer-object-iterable-methods > invalid(58): for (const key of Object.keys(object)) {\n\tfoo(key, (object as Record<string, unknown>)[key]);\n} 1`] = `

  1 | for (const key of Object.keys(object)) {
  2 | 	foo(key, (object as Record<string, unknown>)[key]);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(58): for (const key of Object.keys(object)) {\n\tfoo(key, (object as Record<string, unknown>)[key]);\n} 2`] = `

Message:
> 1 | for (const key of Object.keys(object)) {
    |                          ^^^^ Prefer \`Object.entries()\` over \`Object.keys()\`.
  2 | 	foo(key, (object as Record<string, unknown>)[key]);
  3 | }

Output:
  1 | for (const [key, value] of Object.entries(object as Record<string, unknown>)) {
  2 | 	foo(key, value);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(59): for (const key of Object.keys(object)) {\n\tfoo((<Record<string, unknown>>object)[key]);\n} 1`] = `

  1 | for (const key of Object.keys(object)) {
  2 | 	foo((<Record<string, unknown>>object)[key]);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(59): for (const key of Object.keys(object)) {\n\tfoo((<Record<string, unknown>>object)[key]);\n} 2`] = `

Message:
> 1 | for (const key of Object.keys(object)) {
    |                          ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  2 | 	foo((<Record<string, unknown>>object)[key]);
  3 | }

Output:
  1 | for (const value of Object.values(<Record<string, unknown>>object)) {
  2 | 	foo(value);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(6): const result = Object.keys(object).map(function (key) {\n\treturn foo(object[key], key);\n}); 1`] = `

  1 | const result = Object.keys(object).map(function (key) {
  2 | 	return foo(object[key], key);
  3 | });

`;

exports[`prefer-object-iterable-methods > invalid(6): const result = Object.keys(object).map(function (key) {\n\treturn foo(object[key], key);\n}); 2`] = `

Message:
> 1 | const result = Object.keys(object).map(function (key) {
    |                       ^^^^ Prefer \`Object.entries()\` over \`Object.keys()\`.
  2 | 	return foo(object[key], key);
  3 | });

Output:
  1 | const result = Object.entries(object).map(function ([key, value]) {
  2 | 	return foo(value, key);
  3 | });

`;

exports[`prefer-object-iterable-methods > invalid(60): for (const key of Object.keys(object)) {\n\tfoo(object[key] as Foo);\n} 1`] = `

  1 | for (const key of Object.keys(object)) {
  2 | 	foo(object[key] as Foo);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(60): for (const key of Object.keys(object)) {\n\tfoo(object[key] as Foo);\n} 2`] = `

Message:
> 1 | for (const key of Object.keys(object)) {
    |                          ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  2 | 	foo(object[key] as Foo);
  3 | }

Output:
  1 | for (const value of Object.values(object)) {
  2 | 	foo(value as Foo);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(61): Object.keys(object /* keep this */ as A).map(key => (object as A)[key]); 1`] = `

  1 | Object.keys(object /* keep this */ as A).map(key => (object as A)[key]);

`;

exports[`prefer-object-iterable-methods > invalid(61): Object.keys(object /* keep this */ as A).map(key => (object as A)[key]); 2`] = `

Message:
> 1 | Object.keys(object /* keep this */ as A).map(key => (object as A)[key]);
    |        ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.

`;

exports[`prefer-object-iterable-methods > invalid(62): for (const key of Object.keys(object)) {\n\tfoo(object[\n\t\t// Keep this.\n\t\tkey\n\t]);\n} 1`] = `

  1 | for (const key of Object.keys(object)) {
  2 | 	foo(object[
  3 | 		// Keep this.
  4 | 		key
  5 | 	]);
  6 | }

`;

exports[`prefer-object-iterable-methods > invalid(62): for (const key of Object.keys(object)) {\n\tfoo(object[\n\t\t// Keep this.\n\t\tkey\n\t]);\n} 2`] = `

Message:
> 1 | for (const key of Object.keys(object)) {
    |                          ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  2 | 	foo(object[
  3 | 		// Keep this.
  4 | 		key
  5 | 	]);
  6 | }

`;

exports[`prefer-object-iterable-methods > invalid(63): for (const [key, /* Keep this. */ value] of Object.entries(object)) {\n\tfoo(key);\n} 1`] = `

  1 | for (const [key, /* Keep this. */ value] of Object.entries(object)) {
  2 | 	foo(key);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(63): for (const [key, /* Keep this. */ value] of Object.entries(object)) {\n\tfoo(key);\n} 2`] = `

Message:
> 1 | for (const [key, /* Keep this. */ value] of Object.entries(object)) {
    |                                                    ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.
  2 | 	foo(key);
  3 | }

`;

exports[`prefer-object-iterable-methods > invalid(64): Object.entries(object).every(([key /* Keep this. */]) => key); 1`] = `

  1 | Object.entries(object).every(([key /* Keep this. */]) => key);

`;

exports[`prefer-object-iterable-methods > invalid(64): Object.entries(object).every(([key /* Keep this. */]) => key); 2`] = `

Message:
> 1 | Object.entries(object).every(([key /* Keep this. */]) => key);
    |        ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.

`;

exports[`prefer-object-iterable-methods > invalid(65): for (const key of Object.keys(object)) {\n\tfoo(object[key]);\n\tconst read = () => object[key];\n\tconst Reader = class {\n\t\tread() {\n\t\t\treturn object[key];\n\t\t}\n\t};\n} 1`] = `

  1 | for (const key of Object.keys(object)) {
  2 | 	foo(object[key]);
  3 | 	const read = () => object[key];
  4 | 	const Reader = class {
  5 | 		read() {
  6 | 			return object[key];
  7 | 		}
  8 | 	};
  9 | }

`;

exports[`prefer-object-iterable-methods > invalid(65): for (const key of Object.keys(object)) {\n\tfoo(object[key]);\n\tconst read = () => object[key];\n\tconst Reader = class {\n\t\tread() {\n\t\t\treturn object[key];\n\t\t}\n\t};\n} 2`] = `

Message:
> 1 | for (const key of Object.keys(object)) {
    |                          ^^^^ Prefer \`Object.entries()\` over \`Object.keys()\`.
  2 | 	foo(object[key]);
  3 | 	const read = () => object[key];
  4 | 	const Reader = class {
  5 | 		read() {
  6 | 			return object[key];
  7 | 		}
  8 | 	};
  9 | }

Output:
  1 | for (const [key, value] of Object.entries(object)) {
  2 | 	foo(value);
  3 | 	const read = () => object[key];
  4 | 	const Reader = class {
  5 | 		read() {
  6 | 			return object[key];
  7 | 		}
  8 | 	};
  9 | }

`;

exports[`prefer-object-iterable-methods > invalid(66): Object.entries(object).map(function ([key, value]) {\n\tconst read = function () {\n\t\treturn arguments;\n\t};\n\treturn read(key);\n}); 1`] = `

  1 | Object.entries(object).map(function ([key, value]) {
  2 | 	const read = function () {
  3 | 		return arguments;
  4 | 	};
  5 | 	return read(key);
  6 | });

`;

exports[`prefer-object-iterable-methods > invalid(66): Object.entries(object).map(function ([key, value]) {\n\tconst read = function () {\n\t\treturn arguments;\n\t};\n\treturn read(key);\n}); 2`] = `

Message:
> 1 | Object.entries(object).map(function ([key, value]) {
    |        ^^^^^^^ Prefer \`Object.keys()\` over \`Object.entries()\`.
  2 | 	const read = function () {
  3 | 		return arguments;
  4 | 	};
  5 | 	return read(key);
  6 | });

Output:
  1 | Object.keys(object).map(function (key) {
  2 | 	const read = function () {
  3 | 		return arguments;
  4 | 	};
  5 | 	return read(key);
  6 | });

`;

exports[`prefer-object-iterable-methods > invalid(7): const result = Object.keys(object).map(function (key) {\n\treturn this.format(object[key]);\n}, formatter); 1`] = `

  1 | const result = Object.keys(object).map(function (key) {
  2 | 	return this.format(object[key]);
  3 | }, formatter);

`;

exports[`prefer-object-iterable-methods > invalid(7): const result = Object.keys(object).map(function (key) {\n\treturn this.format(object[key]);\n}, formatter); 2`] = `

Message:
> 1 | const result = Object.keys(object).map(function (key) {
    |                       ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  2 | 	return this.format(object[key]);
  3 | }, formatter);

Output:
  1 | const result = Object.values(object).map(function (value) {
  2 | 	return this.format(value);
  3 | }, formatter);

`;

exports[`prefer-object-iterable-methods > invalid(8): for (const key of Object.keys(object)) {\n\tupdate(object);\n\tfoo(object[key]);\n} 1`] = `

  1 | for (const key of Object.keys(object)) {
  2 | 	update(object);
  3 | 	foo(object[key]);
  4 | }

`;

exports[`prefer-object-iterable-methods > invalid(8): for (const key of Object.keys(object)) {\n\tupdate(object);\n\tfoo(object[key]);\n} 2`] = `

Message:
> 1 | for (const key of Object.keys(object)) {
    |                          ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  2 | 	update(object);
  3 | 	foo(object[key]);
  4 | }

`;

exports[`prefer-object-iterable-methods > invalid(9): for (const key of Object.keys(object)) {\n\tfoo(object[key]);\n\tupdate(object);\n} 1`] = `

  1 | for (const key of Object.keys(object)) {
  2 | 	foo(object[key]);
  3 | 	update(object);
  4 | }

`;

exports[`prefer-object-iterable-methods > invalid(9): for (const key of Object.keys(object)) {\n\tfoo(object[key]);\n\tupdate(object);\n} 2`] = `

Message:
> 1 | for (const key of Object.keys(object)) {
    |                          ^^^^ Prefer \`Object.values()\` over \`Object.keys()\`.
  2 | 	foo(object[key]);
  3 | 	update(object);
  4 | }

`;
